[project]
name = "tiny-claude-recycler"
version = "0.1.0"
description = "Cycle Anthropic OAuth keys with master API-key fallback."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucas Tonon" }]
keywords = ["anthropic", "claude", "oauth", "rotation", "rate-limit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/lucastonon/tiny-claude-recycler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
